Fix uppercased buttons on IE11
Button texts were displayed in uppercase.
Internet Explorer 11 doesn't support the value "initial" for CSS
properties.

--- a/app/client/front/compass/sass/modules/_buttons.scss
+++ b/app/client/front/compass/sass/modules/_buttons.scss
@@ -1,5 +1,5 @@
 .lowercase-button {
-  text-transform: initial;
+  text-transform: none;
 }
 
 /* Text buttons */
